# scripts

./: .goreleaser.yml  Dockerfile  README.md  build.yaml  cloudbuild.yaml  compare_all.py  dockerz_1.0.4-1_all.deb  dockerz_1.0.4-1_amd64.buildinfo  dockerz_1.0.4-1_amd64.changes  go.mod  go.sum  install.sh  package.md  plan.md  public.gpg  scenario.md  services.yaml  setup-cicd.sh  setup.sh  u.md  uninstall.sh
dockerz/: .dockerignore  .gitignore  .goreleaser.yml  Dockerfile  GEMINI.md  MANIFEST.in  Makefile  README.md  build.yaml  go.mod  pyproject.toml  services.yaml
dockerz/cmd/dockerz/: main.go
dockerz/debian/: changelog  control  dockerz.1  rules
dockerz/dockerz/: builder.py  cli.py
dockerz/internal/builder/: builder.go  parallel.go  push_manager.go  resource_monitor.go
dockerz/internal/cache/: layer.go  registry.go
dockerz/internal/config/: config.go  types.go
dockerz/internal/discovery/: discovery.go  types.go
dockerz/internal/git/: tracker.go  types.go
dockerz/internal/smart/: orchestrator.go  types.go
dockerz/tests/: cloudbuild-dockerz.yaml
dockerz/tests/input-files/: changed-scenario-4.txt  scenario-13-edge-case.txt  scenario-16-unified.txt
dockerz/tests/output-files/: output-26.txt
dockerz/tests/results/: scenario-12.md  scenario-13.md  scenario-19.md  scenario-2.md  (+21 more)
gcp-k8s/: .gitignore  MANIFEST.in  README.md  gcloud-kubectl-switch.conf  gcloud-kubectl-switch.sh  gcloud-kubectl-switch.zsh  pyproject.toml  sample.conf
gcp-k8s/debian/: changelog  control  copyright  sw.1
gcp-k8s/sw/: cli.py
gcp-k8s/swtch/: cli.py  switch.py
(+293 files in other folders)
