[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dockerz"
version = "1.0.4"
description = "A CLI tool to build and push multiple Docker images in parallel."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Adhbhut Gupta", email = "adhbutg@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://pypi.org/project/dockerz/"

[project.scripts]
dockerz = "dockerz.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["dockerz"]
