[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swtch"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A simple CLI tool to switch between gcloud and kubectl configurations."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "pyyaml",
]

[project.scripts]
swtch = "swtch.cli:main"